--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,6 @@
 {
-  "tsserver.log": "verbose"
+  "tsserver.log": "verbose",
+  "snippets.textmateSnippetsRoots": [
+    "/Users/bobylito/.config/coc/vscode-snippets/"
+  ]
 }
